Primer commit del metodo de pago online

--- a/src/app/explore-container/explore-container.component.html
+++ b/src/app/explore-container/explore-container.component.html
@@ -1,4 +1,181 @@
 <div id="container">
-  <strong>{{ name }}</strong>
-  <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <strong>Acciones</strong>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="postFlow()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          POST FLOW
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="getPaidsMercado()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Metodos de pago
+        </ion-button>
+
+        <ion-button (click)="getIdMercado()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Ides
+        </ion-button>
+
+        <ion-button (click)="pay()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Create pago
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="openBrowser()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Browser
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="getCurrentPosition()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          GetCurrentPosition
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="watchPosition()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          WatchPosition
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="showAlert()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Show Alert
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="showConfirm()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Show Confirm
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <img src="../../assets/icon/favicon.png" style="height: 100px; width: 100px;">
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="showPrompt()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Show Prompt
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="checkStatusNetwork()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Check Status Network
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="toastShow()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Shared
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="setData()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Set Data
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="getData()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Get Data
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="removeData()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Remove Data
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid>
+    <ion-row>
+      <ion-col col="12">
+        <ion-button (click)="toastShow()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Toast Show
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </div>
