--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,1 +1,10 @@
+ion-tab-bar {
+    --background: #ebebeb;
+    --color: #7a7a7a;
+}
 
+ion-tab-button {
+    --color-selected: blue;
+    --padding-top: 10px;
+    --ripple-color: yellow;
+}
