--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,65 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Payment Online
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <ion-item>
+          <ion-label position="floating">Nombre</ion-label>
+          <ion-input [(ngModel)]="name" type="text"></ion-input>
+        </ion-item>
+      </ion-col>
+      
+      <ion-col size="6">
+        <ion-item>
+          <ion-label position="floating">Monto</ion-label>
+          <ion-input [(ngModel)]="amount" type="number"></ion-input>
+        </ion-item>
+      </ion-col>
+      
+      <ion-col size="8">
+        <ion-item>
+          <ion-label position="floating">Tarjeta</ion-label>
+          <ion-input [(ngModel)]="cardnumber" type="number"></ion-input>
+        </ion-item>
+      </ion-col>
+
+      <ion-col size="4">
+        <ion-item>
+          <ion-label position="floating">CVC</ion-label>
+          <ion-input [(ngModel)]="cvc" type="number"></ion-input>
+        </ion-item>
+      </ion-col>
+      
+      <ion-col size="6">
+        <ion-item>
+          <ion-label position="floating">Mes expiración</ion-label>
+          <ion-input [(ngModel)]="expiryMonth" type="number"></ion-input>
+        </ion-item>
+      </ion-col>
+      
+      <ion-col size="6">
+        <ion-item>
+          <ion-label position="floating">Año expiración</ion-label>
+          <ion-input [(ngModel)]="expiryYear" type="number"></ion-input>
+        </ion-item>
+      </ion-col>
+
+      <ion-col size="12">
+        <ion-button (click)="generateToken()" expand="block" shape="round">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Realizar pago
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
 </ion-content>
